# equation

./: .pre-commit-config.yaml  pyproject.toml
250930-equation/: equation.py  test_eqution.py
250930-equation/objects-op-equation/: equation_with_objects.py  equation_with_objects_final.py
250930-equation/procedural -op-equation/: equationFinal.py  equation_old.py
src/equation/: __init__.py  base.py  operators.py  units.py  utils.py
tests/: test_eqution.py
